--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@babel/runtime": "^7.10.2",
     "fslightbox": "^3.4.1",
+    "punycode": "^2.3.1",
     "vanilla-lazyload": "^17.8.3"
   },
   "devDependencies": {
